Dependencies/MELibraries/32/BC/MEGSV.H

#define GSV_OK 0
typedef struct GSV_ACTIVATE_EXTENDED_
{
	long actex_size;
	long actex_buffersize;
	long actex_flags;
	long actex_baudrate;
} GSV_ACTIVATE_EXTENDED;
#define GSV_ACTEX_SIZE ((long)sizeof(GSV_ACTIVATE_EXTENDED))
int WINAPI GSVgetSerialNo(int no, char *number);
int WINAPI GSVgetCanActive(int no);
int WINAPI GSVsetCanMode20B(int no, int mode20b);
int WINAPI GSVgetCanMode20B(int no);
int WINAPI GSVsetUserText(int no, char *txt);