Dependencies/MELibraries/32/VB/MEGSV.BAS

Public Declare Function GSVgetCanActive Lib "MEGSV" Alias "#419" (ByVal no As Long) As Long
Public Declare Function GSVsetCanMode20B Lib "MEGSV" Alias "#420" (ByVal no As Long, ByVal mode20b As Long) As Long
Public Declare Function GSVgetCanMode20B Lib "MEGSV" Alias "#421" (ByVal no As Long) As Long
Public Declare Function GSVsetUserText Lib "MEGSV" Alias "#448" (ByVal no As Long, ByVal txt As String) As Long
Public Function GSV_ACTEX_SIZE() As Long
    Dim dummy As GSV_ACTIVATE_EXTENDED
    GSV_ACTEX_SIZE = Len(dummy)
End Function
Public Function GSVgetSerialNo(ByVal no As Long, ByRef number As String) As Long
    Dim sernum As String, rcode As Long, cnum As Long
    sernum = String(10, vbNullChar)
    rcode = MEreadSerialNo(no, sernum)
    cnum = InStr(1, sernum, vbNullChar)
    If rcode = GSV_OK Then
        If cnum > 0 Then sernum = Left(sernum, cnum - 1)
        number = sernum
    End If
    GSVgetSerialNo = rcode
End Function
